--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'pack'
+    versioningScheme: 'byPrereleaseNumber'
 
 - task: DotNetCoreCLI@2
   inputs:
